# seaorm_tutorial

./: .env  Cargo.toml  README.md  compose.yaml  user_expand.rs
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  todo.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_bakery_table.rs  m20220101_000001_create_user_table.rs  m20220101_000002_create_chef_table.rs  m20220101_000002_create_todo_table.rs
src/: main.rs
src/entities/: bakery.rs  chef.rs  mod.rs  prelude.rs
src/migrator/: m20230101_000001_create_bakery_table.rs  m20230101_000002_create_chef_table.rs  mod.rs
