[package]
name = "seaorm_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
sea-orm = {version= "0.12.6", features=["sqlx-postgres", "runtime-async-std-native-tls", "macros", "mock"]}
sea-orm-migration = "0.12.6"
