[package]
name = "seaorm_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {version= "1.1.0", features=["sqlx-postgres", "runtime-tokio-native-tls", "macros", "mock"]}
sea-orm-migration = "1.1.0"
entity = { path = "entity"}
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[workspace]
members = [".", "entity", "migration"]
